force-app/main/default/objects/NWFBSettings__c/NWFBSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>NWFB Settings</label>
</CustomObject>