force-app/main/default/objects/NWFBSettings__c/fields/DisableSMS__c.field-meta.xml
<CustomField>
    <fullName>DisableSMS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disable SMS</label>
    <type>Checkbox</type>
</CustomField>