force-app/main/default/objects/NWFBSettings__c/fields/TodaysTripReport__c.field-meta.xml
<CustomField>
    <fullName>TodaysTripReport__c</fullName>
    <label>Today&apos;s Trip Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>