force-app/main/default/objects/NWFBSettings__c/fields/TripDispatcherReport__c.field-meta.xml
<CustomField>
    <fullName>TripDispatcherReport__c</fullName>
    <label>Trip Dispatcher Report</label>
    <length>255</length>
    <type>Text</type>
</CustomField>